--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,28 @@
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+
+.mdl-layout__header-row {
+  justify-content: center;
+padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: crimson;
+}
+
+.page-content {
+  color: gold;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+}
+
+body {
+  background-color: darkblue;
+}
